# robotics

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  blob_detector.py  main.py  pyproject.toml
exercises/: exercise_01.py
geometry/: __init__.py
repr/: __init__.py
robotics/: __init__.py  __main__.py  mapaA_CARRERA.txt  mapaB_CARRERA.txt
robotics/actuators/: brickpi3.py  motor.py
robotics/geometry/: __init__.py
robotics/paint/: __init__.py
robotics/robot/: ball_following_speed_generator.py  controller.py  final_trajectory_speed_generator.py  hardcoded_speed_generator.py  map.py  obstacle_trajectory_speed_generator.py  odometry.py  robot.py  robot_finder_speed_generator.py  trajectory_generator.py
robotics/sensors/: camera.py  compass.py  gyro.py  light.py  sonar.py
specs/: __init__.py  ball_following_speed_generator_spec.py  camera_spec.py  controller_spec.py  coordinates_spec.py  geometry_spec.py  hardcoded_controller_spec.py  hardcoded_speed_generator_spec.py  maplib_spec.py  odometry_spec.py  paint_spec.py  repr_spec.py  robot_spec.py  trajectory_controller_spec.py  trajectory_generator_spec.py
