[tool.poetry]
name = "robotics"
version = "0.1.0"
description = ""
authors = ["Federico Barcelona <unizar@federico.barcelona>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
spidev = "^3.5"

[tool.poetry.dev-dependencies]
mamba = "^0.11.2"
expects = "^0.9.0"
flake8 = "^4.0.1"
doublex = "^1.9.3"

[tool.poetry.scripts]
robot = 'robotics:__main__'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
